syntax = "proto2";

message DnsQuery {

  // Query condensed information, must match DNS_PACKET_* in packet.h
  enum Flags {
    PROTOCOL_TCP = 1;                    // 0: UDP, 1: TCP
    PRTOCOL_IPV6 = 2;                    // 0: IPv4, 1: IPv6
    HAS_REQUEST = 4;                     // request present
    HAS_RESPONSE = 8;                    // response present
  }
  // flags is a bit-combination of enum Flags
  optional uint32  flags = 1;

  // Client information
  optional bytes   client_addr = 2;      // client IP, either 4 or 16 bytes
  optional uint32  client_port = 3;      // client port (16 bits)

  // Server information
  optional bytes   server_addr = 4;      // client IP, either 4 or 16 bytes
  optional uint32  server_port = 5;      // client port (16 bits)

  // Common DNS information
  optional uint32  id = 6;               // transaction ID (16 bits)
  optional string  qname = 7;            // decoded dot-separated ASCI-only query name
  optional uint32  qtype = 8;            // query type (16 bits)
  optional uint32  qclass = 9;          // query class (16 bits)

  // DNS request information
  optional uint64  request_time_us = 10; // micro-seconds since the Epoch
  optional uint32  request_flags = 11;   // flags from response packet (16 bits)
  optional uint32  request_length = 12;  // length of the request DNS message

  // DNS response information
  optional uint64  response_time_us = 13;// micro-seconds since the Epoch
  optional uint32  response_flags = 14;  // flags from response packet (16 bits)
  optional uint32  response_length = 15; // length of the response DNS message
}
